<resources>
    <string name="app_name">About Me</string>
    <string name="Name_text">Александр Седов</string>
    <string name="Yellow_star">Yellow star</string>
    <string name="bio">  Всем привет, меня зовут Александр.\n\n Мне 24.
\n\n В детстве занимался плаванием и вольной борьбой.
\n Плаванием занимался 5 лет. Есть пару медалей за 2ое и 3ее место. По окончанию имел второй взрослый разряд
\n\n В 2014 закончил школу и поступил в ТвГУ на специальность компьютерная безопасность.
\n Учился пять лет, первые три года было очень много математики и немного програмирования.
\n С 4 курса пошла компьютерная безопасность, работа с базами данных, нейроные сети.
\n\n Окончил университет в 2020 защитив диплом на отлично. После начал интересоваться мобильной разработкой.
\n\n Так как всегда пользовался андроидом, то выбор пал на андроид разработку.
\n В данный момент работаю в компании "Русский свет".\n\n </string>
    <string name="What_is_your_nickname">Как вас зовут?</string>
    <string name="done">Выполнено</string>
</resources>